--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </style>
 </head>
 <body>
-    <h1>LabsPIIS</h1>
+    <h1>LabsEVT</h1>
     <ul>
         <li><a href="EVT1.1/Filmi.html">LAB 1</a></li>
         <li><a href="SITE2/index.html">CURS2</a></li>
