--- a/index.html
+++ b/index.html
@@ -41,7 +41,12 @@
     <ul>
         <li><a href="EVT1.1/Filmi.html">LAB 1</a></li>
         <li><a href="SITE2/index.html">CURS2</a></li>
-        
+        <li><a href="EVT2/index.html">EVT2</a></li>
+        <li><a href="EVT3/index.html">EVT3</a></li>
+        <li><a href="EVT4/index.html">EVT4</a></li>
+        <li><a href="EVT5/index.html">EVT5</a></li>
+        <li><a href="EVT6/index.html">EVT6</a></li>
+        <li><a href="EVT7/index.html">EVT7</a></li>
     </ul>
 </body>
 </html>
